services/apps/application/product/k8s/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
    spec:
      containers:
        - name: product
          image: public.ecr.aws/o2b5n0j5/eks-saas-product:latest
          resources:
            requests:
              cpu: 1
          imagePullPolicy: Always
          ports:
            - containerPort: 3005
              name: "http"
      tolerations:
      - key: "premiumnodes"
        operator: "Exists"
        effect: "NoSchedule"
      nodeSelector:
        tenant-tier: premium
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
spec:
  selector:
    app: product
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3005
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product-service-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/mergeable-ingress-type: "minion"
spec:
  rules:
    - host: a6827acb0d6ef4172b966aa6ba3da833-2faefb68832aa130.elb.us-west-2.amazonaws.com
      http:
        paths:
          - backend:
              service:
                name: product-service
                port:
                  number: 80
            path: /app/api/products
            pathType: Prefix
